coq_blocks/antlr/COQParser.py
# Generated from COQ.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class COQParser ( Parser ):

    grammarFileName = "COQ.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Inductive'", "':'", "'Type'", "':='", 
                     "'.'", "'('", "')'", "'{'", "'}'", "'|'", "'->'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NAME", "WS" ]

    RULE_prog = 0
    RULE_inductiveDef = 1
    RULE_typeParameters = 2
    RULE_constructor = 3
    RULE_arrowParam = 4
    RULE_binderParam = 5
    RULE_type_expression = 6
    RULE_type_term = 7

    ruleNames =  [ "prog", "inductiveDef", "typeParameters", "constructor", 
                   "arrowParam", "binderParam", "type_expression", "type_term" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    NAME=12
    WS=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(COQParser.EOF, 0)

        def inductiveDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COQParser.InductiveDefContext)
            else:
                return self.getTypedRuleContext(COQParser.InductiveDefContext,i)


        def getRuleIndex(self):
            return COQParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = COQParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 16
                self.inductiveDef()
                self.state = 19 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 21
            self.match(COQParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InductiveDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(COQParser.NAME, 0)

        def typeParameters(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COQParser.TypeParametersContext)
            else:
                return self.getTypedRuleContext(COQParser.TypeParametersContext,i)


        def constructor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COQParser.ConstructorContext)
            else:
                return self.getTypedRuleContext(COQParser.ConstructorContext,i)


        def getRuleIndex(self):
            return COQParser.RULE_inductiveDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInductiveDef" ):
                listener.enterInductiveDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInductiveDef" ):
                listener.exitInductiveDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInductiveDef" ):
                return visitor.visitInductiveDef(self)
            else:
                return visitor.visitChildren(self)




    def inductiveDef(self):

        localctx = COQParser.InductiveDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_inductiveDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(COQParser.T__0)
            self.state = 24
            self.match(COQParser.NAME)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6 or _la==8:
                self.state = 25
                self.typeParameters()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 31
                self.match(COQParser.T__1)
                self.state = 32
                self.match(COQParser.T__2)


            self.state = 35
            self.match(COQParser.T__3)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.constructor()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10 or _la==12):
                    break

            self.state = 41
            self.match(COQParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(COQParser.NAME)
            else:
                return self.getToken(COQParser.NAME, i)

        def getRuleIndex(self):
            return COQParser.RULE_typeParameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeParameters" ):
                listener.enterTypeParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeParameters" ):
                listener.exitTypeParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeParameters" ):
                return visitor.visitTypeParameters(self)
            else:
                return visitor.visitChildren(self)




    def typeParameters(self):

        localctx = COQParser.TypeParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeParameters)
        self._la = 0 # Token type
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.match(COQParser.T__5)
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 44
                    self.match(COQParser.NAME)
                    self.state = 47 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==12):
                        break

                self.state = 49
                self.match(COQParser.T__1)
                self.state = 50
                self.match(COQParser.T__2)
                self.state = 51
                self.match(COQParser.T__6)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.match(COQParser.T__7)
                self.state = 54 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 53
                    self.match(COQParser.NAME)
                    self.state = 56 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==12):
                        break

                self.state = 58
                self.match(COQParser.T__1)
                self.state = 59
                self.match(COQParser.T__2)
                self.state = 60
                self.match(COQParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return COQParser.RULE_constructor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArrowEntryContext(ConstructorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COQParser.ConstructorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(COQParser.NAME, 0)
        def type_expression(self):
            return self.getTypedRuleContext(COQParser.Type_expressionContext,0)

        def arrowParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COQParser.ArrowParamContext)
            else:
                return self.getTypedRuleContext(COQParser.ArrowParamContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrowEntry" ):
                listener.enterArrowEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrowEntry" ):
                listener.exitArrowEntry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrowEntry" ):
                return visitor.visitArrowEntry(self)
            else:
                return visitor.visitChildren(self)


    class BinderEntryContext(ConstructorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COQParser.ConstructorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(COQParser.NAME, 0)
        def binderParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COQParser.BinderParamContext)
            else:
                return self.getTypedRuleContext(COQParser.BinderParamContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinderEntry" ):
                listener.enterBinderEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinderEntry" ):
                listener.exitBinderEntry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinderEntry" ):
                return visitor.visitBinderEntry(self)
            else:
                return visitor.visitChildren(self)



    def constructor(self):

        localctx = COQParser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constructor)
        self._la = 0 # Token type
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = COQParser.ArrowEntryContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 63
                    self.match(COQParser.T__9)


                self.state = 66
                self.match(COQParser.NAME)
                self.state = 67
                self.match(COQParser.T__1)
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 68
                        self.arrowParam() 
                    self.state = 73
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                self.state = 74
                self.type_expression()
                pass

            elif la_ == 2:
                localctx = COQParser.BinderEntryContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 75
                    self.match(COQParser.T__9)


                self.state = 78
                self.match(COQParser.NAME)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 79
                    self.binderParam()
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrowParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_expression(self):
            return self.getTypedRuleContext(COQParser.Type_expressionContext,0)


        def getRuleIndex(self):
            return COQParser.RULE_arrowParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrowParam" ):
                listener.enterArrowParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrowParam" ):
                listener.exitArrowParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrowParam" ):
                return visitor.visitArrowParam(self)
            else:
                return visitor.visitChildren(self)




    def arrowParam(self):

        localctx = COQParser.ArrowParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrowParam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.type_expression()
            self.state = 88
            self.match(COQParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinderParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_expression(self):
            return self.getTypedRuleContext(COQParser.Type_expressionContext,0)


        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(COQParser.NAME)
            else:
                return self.getToken(COQParser.NAME, i)

        def getRuleIndex(self):
            return COQParser.RULE_binderParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinderParam" ):
                listener.enterBinderParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinderParam" ):
                listener.exitBinderParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinderParam" ):
                return visitor.visitBinderParam(self)
            else:
                return visitor.visitChildren(self)




    def binderParam(self):

        localctx = COQParser.BinderParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_binderParam)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(COQParser.T__5)
            self.state = 92 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 91
                self.match(COQParser.NAME)
                self.state = 94 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

            self.state = 96
            self.match(COQParser.T__1)
            self.state = 97
            self.type_expression()
            self.state = 98
            self.match(COQParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COQParser.Type_termContext)
            else:
                return self.getTypedRuleContext(COQParser.Type_termContext,i)


        def getRuleIndex(self):
            return COQParser.RULE_type_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_expression" ):
                listener.enterType_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_expression" ):
                listener.exitType_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_expression" ):
                return visitor.visitType_expression(self)
            else:
                return visitor.visitChildren(self)




    def type_expression(self):

        localctx = COQParser.Type_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 100
                    self.type_term()

                else:
                    raise NoViableAltException(self)
                self.state = 103 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return COQParser.RULE_type_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TypeTermParensContext(Type_termContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COQParser.Type_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_expression(self):
            return self.getTypedRuleContext(COQParser.Type_expressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeTermParens" ):
                listener.enterTypeTermParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeTermParens" ):
                listener.exitTypeTermParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeTermParens" ):
                return visitor.visitTypeTermParens(self)
            else:
                return visitor.visitChildren(self)


    class TypeTermNameContext(Type_termContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COQParser.Type_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(COQParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeTermName" ):
                listener.enterTypeTermName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeTermName" ):
                listener.exitTypeTermName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeTermName" ):
                return visitor.visitTypeTermName(self)
            else:
                return visitor.visitChildren(self)



    def type_term(self):

        localctx = COQParser.Type_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type_term)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                localctx = COQParser.TypeTermNameContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(COQParser.NAME)
                pass
            elif token in [6]:
                localctx = COQParser.TypeTermParensContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(COQParser.T__5)
                self.state = 107
                self.type_expression()
                self.state = 108
                self.match(COQParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





